--- a/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
+++ b/Notebooks2023/2023-Query-PDF-Create-Pages-HF-DS.ipynb
@@ -133,20 +133,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "admin\n",
-      "fgandataset01\n",
-      "ITU-T-Build-a-thon\n",
-      "vishnuramov\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(my_argilla_workspace)\n",
     "print(my_argilla_dbname)\n",
@@ -432,16 +421,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Upload 1 LFS files: 100%|██████████| 1/1 [00:05<00:00,  5.67s/it]00:00<?, ?it/s]\n",
-      "Pushing dataset shards to the dataset hub: 100%|██████████| 1/1 [00:07<00:00,  7.92s/it]\n"
+      "Pushing dataset shards to the dataset hub: 100%|██████████| 1/1 [00:00<00:00, 11125.47it/s]\n",
+      "Downloading metadata: 100%|██████████| 1.04k/1.04k [00:00<00:00, 1.08MB/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[05/17/23 16:42:03] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> WARNING:datasets.arrow_dataset:Updating downloaded metadata with <a href=\"file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/arrow_dataset.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">arrow_dataset.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/arrow_dataset.py#4985\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">4985</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         the new split.                                                   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">                     </span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[2;36m[05/17/23 16:42:03]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m WARNING:datasets.arrow_dataset:Updating downloaded metadata with \u001b]8;id=378807;file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/arrow_dataset.py\u001b\\\u001b[2marrow_dataset.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=563191;file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/arrow_dataset.py#4985\u001b\\\u001b[2m4985\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m                    \u001b[0m         the new split.                                                   \u001b[2m                     \u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -474,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -488,19 +492,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading readme: 100%|██████████| 1.04k/1.04k [00:00<00:00, 406kB/s]\n"
+      "Downloading readme: 100%|██████████| 1.04k/1.04k [00:00<00:00, 399kB/s]\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[05/17/23 16:26:38] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> WARNING:datasets.builder:Using custom data configuration                <a href=\"file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">builder.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py#496\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">496</span></a>\n",
-       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         vishnuramov--ITU-T-Build-a-thon-b472ac5cd6a5add9                        <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">              </span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[05/17/23 16:47:49] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> WARNING:datasets.builder:Using custom data configuration                <a href=\"file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">builder.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py#496\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">496</span></a>\n",
+       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         vishnuramov--ITU-T-Build-a-thon-3fc2204074b9d5bd                        <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">              </span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m[05/17/23 16:26:38]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m WARNING:datasets.builder:Using custom data configuration                \u001b]8;id=160629;file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py\u001b\\\u001b[2mbuilder.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=975116;file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py#496\u001b\\\u001b[2m496\u001b[0m\u001b]8;;\u001b\\\n",
-       "\u001b[2;36m                    \u001b[0m         vishnuramov--ITU-T-Build-a-thon-b472ac5cd6a5add9                        \u001b[2m              \u001b[0m\n"
+       "\u001b[2;36m[05/17/23 16:47:49]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m WARNING:datasets.builder:Using custom data configuration                \u001b]8;id=669149;file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py\u001b\\\u001b[2mbuilder.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=624476;file:///opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/datasets/builder.py#496\u001b\\\u001b[2m496\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m                    \u001b[0m         vishnuramov--ITU-T-Build-a-thon-3fc2204074b9d5bd                        \u001b[2m              \u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -510,16 +514,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset None/None to /Users/vishnu/.cache/huggingface/datasets/vishnuramov___parquet/vishnuramov--ITU-T-Build-a-thon-b472ac5cd6a5add9/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
+      "Downloading and preparing dataset None/None to /Users/vishnu/.cache/huggingface/datasets/vishnuramov___parquet/vishnuramov--ITU-T-Build-a-thon-3fc2204074b9d5bd/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data: 100%|██████████| 241k/241k [00:00<00:00, 403kB/s]\n",
-      "Downloading data files: 100%|██████████| 1/1 [00:03<00:00,  3.16s/it]\n",
-      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 541.97it/s]\n",
+      "Downloading data: 100%|██████████| 241k/241k [00:00<00:00, 471kB/s]\n",
+      "Downloading data files: 100%|██████████| 1/1 [00:03<00:00,  3.28s/it]\n",
+      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 806.44it/s]\n",
       "                                                                      "
      ]
     },
@@ -527,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset parquet downloaded and prepared to /Users/vishnu/.cache/huggingface/datasets/vishnuramov___parquet/vishnuramov--ITU-T-Build-a-thon-b472ac5cd6a5add9/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
+      "Dataset parquet downloaded and prepared to /Users/vishnu/.cache/huggingface/datasets/vishnuramov___parquet/vishnuramov--ITU-T-Build-a-thon-3fc2204074b9d5bd/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
      ]
     },
     {
@@ -548,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -558,23 +562,6 @@
       ],
       "text/plain": [
        "\u001b[?25l"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/rich/live.py:229: UserWarning: \n",
-       "install \"ipywidgets\" for Jupyter support\n",
-       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "/opt/homebrew/Caskroom/miniforge/base/envs/myenv38c/lib/python3.8/site-packages/rich/live.py:229: UserWarning: \n",
-       "install \"ipywidgets\" for Jupyter support\n",
-       "  warnings.warn('install \"ipywidgets\" for Jupyter support')\n"
       ]
      },
      "metadata": {},
@@ -597,13 +584,13 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">100</span> records logged to \n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">102</span> records logged to \n",
        "<a href=\"https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\" target=\"_blank\"><span style=\"color: #0000ff; text-decoration-color: #0000ff; text-decoration: underline\">https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback</span></a>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m100\u001b[0m records logged to \n",
-       "\u001b]8;id=324366;https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\u001b\\\u001b[4;94mhttps://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\u001b[0m\u001b]8;;\u001b\\\n"
+       "\u001b[1;36m102\u001b[0m records logged to \n",
+       "\u001b]8;id=34542;https://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\u001b\\\u001b[4;94mhttps://vishnuramov-build-a-thon-argilla-hf-space-01.hf.space/datasets/admin/fgandataset_test_readback\u001b[0m\u001b]8;;\u001b\\\n"
       ]
      },
      "metadata": {},
@@ -612,10 +599,10 @@
     {
      "data": {
       "text/plain": [
-       "BulkResponse(dataset='fgandataset_test_readback', processed=100, failed=0)"
+       "BulkResponse(dataset='fgandataset_test_readback', processed=102, failed=0)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
