--- a/Notebooks2023/2023-User-Management.ipynb
+++ b/Notebooks2023/2023-User-Management.ipynb
@@ -16,9 +16,9 @@
     "\n",
     "Description: Example notebook for listing , creating and deleting users.\n",
     "Pre-requisites:\n",
-    "1) user name to be created = oscar\n",
-    "2) passwd to be set = secret\n",
-    "3) workspace to be created = costarica"
+    "1) user name to be created = e.g. oscar\n",
+    "2) passwd to be set = e.g. secret\n",
+    "3) workspace to be created = e.g. costarica"
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "True"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,9 @@
    ],
    "source": [
     "users = http.get(\"/api/users\").json()\n",
-    "created_username= \"oscar\"\n",
+    "#Input the username from the admin\n",
+    "print(\"Enter the username to be created: \")\n",
+    "created_username= input()\n",
     "\n",
     "for item in users:\n",
     "    if (created_username == item['username']):\n",
@@ -222,7 +224,11 @@
    ],
    "source": [
     "workspaces = http.get(\"/api/workspaces\").json()\n",
-    "created_workspace=\"costarica\"\n",
+    "#Input the workspace from the admin\n",
+    "print(\"Enter the workspace to be created: \")\n",
+    "created_workspace= input()\n",
+    "\n",
+    "created_workspace_id = -1 #setup an invariant.\n",
     "for item in workspaces:\n",
     "    if (created_workspace == item['name']):\n",
     "        created_workspace_id = item['id']\n",
@@ -249,10 +255,10 @@
    "outputs": [],
    "source": [
     "created_role=\"annotator\"\n",
-    "created_first_name=\"Oscar\"\n",
-    "created_last_name= \"Castillo\"\n",
-    "created_password= \"costarica\"\n",
-    "#see above #created_username= \"oscar\"\n",
+    "created_first_name=created_username\n",
+    "created_last_name= \"None\"\n",
+    "print(\"Enter the passwd to be created: \")\n",
+    "created_password= input()\n",
     "\n",
     "user = http.post(\"/api/users\", \n",
     "                 json={\"role\": created_role, \n",
@@ -280,7 +286,8 @@
    "outputs": [],
    "source": [
     "#created_workspace=\"costarica\"\n",
-    "workspace = http.post(\"/api/workspaces\", json={\"name\": created_workspace}).json()\n"
+    "if (created_workspace_id != -1):\n",
+    "    workspace = http.post(\"/api/workspaces\", json={\"name\": created_workspace}).json()"
    ]
   },
   {
@@ -319,7 +326,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### set the workspace"
+    "### set the workspace\n",
+    "so that we can import the dataset"
    ]
   },
   {
@@ -373,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Deleting user! this needs the id from above."
+    "### CAUTION: Dont do! Deleting user! this needs the id from above."
    ]
   },
   {
@@ -394,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Trying to del the workspace, but this does not work for some reason"
+    "### CAUTION: Dont do! Trying to del the workspace, but this does not work for some reason"
    ]
   },
   {
