--- a/Notebooks2023/PDF_parsing_v1.ipynb
+++ b/Notebooks2023/PDF_parsing_v1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+Z0MpXm5x2boQ+jiT2f0Z",
+      "authorship_tag": "ABX9TyPFdZrBlu1bp2edIWYTq0pd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,14 +27,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Install all libraries"
+      ],
+      "metadata": {
+        "id": "b8Yf2dPDa1RO"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zJlAYL0TsjYT",
-        "outputId": "8abebc18-8960-483a-fc1f-5e9376571a63"
+        "outputId": "d1bbce2f-6003-4583-c93d-a5c1a90a4377"
       },
       "outputs": [
         {
@@ -51,7 +60,7 @@
             "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /usr/local/lib/python3.10/dist-packages (from langchain) (1.33)\n",
             "Requirement already satisfied: langchain-community<0.1,>=0.0.2 in /usr/local/lib/python3.10/dist-packages (from langchain) (0.0.6)\n",
             "Requirement already satisfied: langchain-core<0.2,>=0.1 in /usr/local/lib/python3.10/dist-packages (from langchain) (0.1.3)\n",
-            "Requirement already satisfied: langsmith<0.1.0,>=0.0.70 in /usr/local/lib/python3.10/dist-packages (from langchain) (0.0.74)\n",
+            "Requirement already satisfied: langsmith<0.1.0,>=0.0.70 in /usr/local/lib/python3.10/dist-packages (from langchain) (0.0.75)\n",
             "Requirement already satisfied: numpy<2,>=1 in /usr/local/lib/python3.10/dist-packages (from langchain) (1.23.5)\n",
             "Requirement already satisfied: pydantic<3,>=1 in /usr/local/lib/python3.10/dist-packages (from langchain) (1.10.13)\n",
             "Requirement already satisfied: requests<3,>=2 in /usr/local/lib/python3.10/dist-packages (from langchain) (2.31.0)\n",
@@ -79,44 +88,108 @@
             "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas) (2023.3.post1)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.10/dist-packages (from pandas) (1.23.5)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+            "Requirement already satisfied: huggingface_hub in /usr/local/lib/python3.10/dist-packages (0.19.4)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from huggingface_hub) (3.13.1)\n",
+            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.10/dist-packages (from huggingface_hub) (2023.6.0)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from huggingface_hub) (2.31.0)\n",
+            "Requirement already satisfied: tqdm>=4.42.1 in /usr/local/lib/python3.10/dist-packages (from huggingface_hub) (4.66.1)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from huggingface_hub) (6.0.1)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface_hub) (4.5.0)\n",
+            "Requirement already satisfied: packaging>=20.9 in /usr/local/lib/python3.10/dist-packages (from huggingface_hub) (23.2)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->huggingface_hub) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->huggingface_hub) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->huggingface_hub) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->huggingface_hub) (2023.11.17)\n",
+            "Collecting datasets\n",
+            "  Downloading datasets-2.16.0-py3-none-any.whl (507 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m507.1/507.1 kB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from datasets) (3.13.1)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from datasets) (1.23.5)\n",
+            "Requirement already satisfied: pyarrow>=8.0.0 in /usr/local/lib/python3.10/dist-packages (from datasets) (10.0.1)\n",
+            "Collecting pyarrow-hotfix (from datasets)\n",
+            "  Downloading pyarrow_hotfix-0.6-py3-none-any.whl (7.9 kB)\n",
+            "Collecting dill<0.3.8,>=0.3.0 (from datasets)\n",
+            "  Downloading dill-0.3.7-py3-none-any.whl (115 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.3/115.3 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (from datasets) (1.5.3)\n",
+            "Requirement already satisfied: requests>=2.19.0 in /usr/local/lib/python3.10/dist-packages (from datasets) (2.31.0)\n",
+            "Requirement already satisfied: tqdm>=4.62.1 in /usr/local/lib/python3.10/dist-packages (from datasets) (4.66.1)\n",
+            "Requirement already satisfied: xxhash in /usr/local/lib/python3.10/dist-packages (from datasets) (3.4.1)\n",
+            "Collecting multiprocess (from datasets)\n",
+            "  Downloading multiprocess-0.70.15-py310-none-any.whl (134 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.8/134.8 kB\u001b[0m \u001b[31m9.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: fsspec[http]<=2023.10.0,>=2023.1.0 in /usr/local/lib/python3.10/dist-packages (from datasets) (2023.6.0)\n",
+            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from datasets) (3.9.1)\n",
+            "Requirement already satisfied: huggingface-hub>=0.19.4 in /usr/local/lib/python3.10/dist-packages (from datasets) (0.19.4)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from datasets) (23.2)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from datasets) (6.0.1)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (23.1.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (6.0.4)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.9.4)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.4.1)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.3.1)\n",
+            "Requirement already satisfied: async-timeout<5.0,>=4.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (4.0.3)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub>=0.19.4->datasets) (4.5.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->datasets) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->datasets) (3.6)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->datasets) (2.0.7)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->datasets) (2023.11.17)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas->datasets) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas->datasets) (2023.3.post1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
+            "Installing collected packages: pyarrow-hotfix, dill, multiprocess, datasets\n",
+            "Successfully installed datasets-2.16.0 dill-0.3.7 multiprocess-0.70.15 pyarrow-hotfix-0.6\n"
           ]
         }
       ],
       "source": [
         "!pip install pypdf\n",
         "!pip install langchain\n",
-        "!pip install pandas\n"
+        "!pip install pandas\n",
+        "!pip install huggingface_hub\n",
+        "!pip install datasets\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Imports"
+      ],
+      "metadata": {
+        "id": "rRq9kbYPa476"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from huggingface_hub import login\n",
+        "from google.colab import userdata"
+      ],
+      "metadata": {
+        "id": "zyxFcmFCakW4"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we read the data from the pdf file."
+      ],
+      "metadata": {
+        "id": "l8Zh5Tdzawh0"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "from langchain.document_loaders import PyPDFLoader\n",
-        "import pandas as pd\n"
-      ],
-      "metadata": {
-        "id": "o6zl0NzlvBRb"
-      },
-      "execution_count": 20,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "loader = PyPDFLoader(\"/content/sample_data/T-REC-Y.Sup71-usecases.pdf\")\n",
-        "pages = loader.load_and_split()"
-      ],
-      "metadata": {
-        "id": "7MaMEdhpE7Ua"
-      },
-      "execution_count": 21,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "loader = PyPDFLoader(\"/content/sample_data/Use-case-AN.pdf\")\n",
+        "pages = loader.load_and_split()\n",
         "simple_data_container = []\n",
+        "\n",
         "for i in range(len(pages)):\n",
         "  print(\"Physical Page =\",\n",
         "      i,\n",
@@ -131,50 +204,77 @@
         "       pages[i].metadata['source'],\n",
         "       pages[i].page_content])\n",
         "  print(\"*****************************\")\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "9I5ZLXkRAaEW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#check whether a parquet file is already there\n",
-        "#if yes, create a df from it\n",
-        "#and append the data_container into it.\n",
         "\n",
         "df = pd.DataFrame(simple_data_container,\n",
-        "                  columns=['page_number', 'document_source', 'page_content'])"
-      ],
-      "metadata": {
-        "id": "804FUp5LGCEH"
-      },
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df.head(10)"
-      ],
-      "metadata": {
-        "id": "UpOYberrEnSS"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "                  columns=['page_number', 'document_source', 'page_content'])\n",
+        "df.head(10)\n",
         "df.to_parquet('/content/sample_data/p1_usecases.parquet')"
       ],
       "metadata": {
-        "id": "nnT4O_GcKOxO"
+        "id": "o6zl0NzlvBRb"
       },
-      "execution_count": 34,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "access the HF hub,\n",
+        "\n",
+        "read the dataset from it\n",
+        "\n",
+        "check whether a parquet file is already there\n",
+        "\n",
+        "if yes, create a df from it\n",
+        "and append the data_container into it."
+      ],
+      "metadata": {
+        "id": "MSeMw839a72I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "hf_token=userdata.get('my_hf_write_token')\n",
+        "login(hf_token)"
+      ],
+      "metadata": {
+        "id": "dYzmNTRSd6v8",
+        "outputId": "a359a118-562e-4151-b246-dcab22c8ea84",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Token will not been saved to git credential helper. Pass `add_to_git_credential=True` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from huggingface_hub import HfApi\n",
+        "api = HfApi()\n",
+        "api.upload_file(\n",
+        "    path_or_fileobj=\"/content/sample_data/p1_usecases.parquet\",\n",
+        "    path_in_repo=\"p1_usecases.parquet\",\n",
+        "    repo_id=\"vishnuramov/ITU-AN-usecases-1\",\n",
+        "    repo_type=\"dataset\",\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "zyAD5ambfOKc"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
